# projectile-defense-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  release-build  vcpkg.json
samples/: basketball.mov
src/: ProjectileDetector.cpp  ProjectileDetector.h  main.cpp  position.cpp  position.h  projectiledetector.cpp  projectiledetector.h  projectiledetector1.cpp  projectiletracker.cpp  projectiletracker.h
